--- a/databases.adoc
+++ b/databases.adoc
@@ -106,7 +106,7 @@ image::nationalparks-deployment.png[National Parks Deployment]
 This will bring up the configuration for the deployment of the national parks backend.  If you think way back to the beginning of the labs, you will recall that a
 *DeploymentConfiguration* tells OpenShift how to deploy something.
 
-In order to make the authentication information available to the java code, we need to add the secret as part of the deployment by modidying the environment information.  To do this, click on *"Environment"* and then select the monogo-ephemeral-podid-credentials and click on *"Add ALL Values from ConfigMap or Secret"*.  Finally click the *"Save"* Button.
+In order to make the authentication information available to the java code, we need to add the secret as part of the deployment by modifying the environment information.  To do this, click on *"Environment"* and then select the monogo-ephemeral-podid-credentials and click on *"Add ALL Values from ConfigMap or Secret"*.  Finally click the *"Save"* Button.
 
 image::ocp-mongo-nationalparks-bind.png[Edit Configuration]
 
